--- a/task3/CMakeLists.txt
+++ b/task3/CMakeLists.txt
@@ -1,1 +1,2 @@
-add_library(rational STATIC rational.hpp)
+set_target_properties(hello PROPERTIES LINKER_LANGUAGE CXX)
+add_library(rational STATIC rational.h)
