--- a/task3/CMakeLists.txt
+++ b/task3/CMakeLists.txt
@@ -1,2 +1,2 @@
-set_target_properties(hello PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(rational PROPERTIES LINKER_LANGUAGE CXX)
 add_library(rational STATIC rational.h)
