Added files via upload

--- a/task3/CMakeLists.txt
+++ b/task3/CMakeLists.txt
@@ -1,2 +1,1 @@
-set_target_properties(rational PROPERTIES LINKER_LANGUAGE CXX)
-add_library(rational STATIC rational.h)
+add_library(rational STATIC rational.cpp)
