--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -6,3 +6,4 @@ target_compile_features(format PRIVATE cxx_variadic_templates)
 install (TARGETS format DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 install (FILES format.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 install (FILES format.cpp DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+add_definitions(-DRELEASE)
