Test of task4 (C++)

--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.1)
 
 project(format CXX)
 add_library(format STATIC format.cpp)
-target_compile_features(format PRIVATE cxx_variadic_templates)
+#target_compile_features(format PRIVATE cxx_variadic_templates)
 install (TARGETS format DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 install (FILES format.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 install (FILES format.cpp DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
