--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -1,18 +1,22 @@
 cmake_minimum_required(VERSION 3.1)
 
-# Project name and language
+message("Ох уж эти стандарты :(")
+
 project(format CXX)
 
-# Library declaration
+add_subdirectory(hexfloat)
+             
 add_library(format STATIC format.cpp)
-
-# Variadic templates support
 target_compile_features(format PRIVATE cxx_variadic_templates)
+target_link_libraries(format hexfloat)
 
-#install directories
 install (TARGETS format DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
 install (FILES format.h DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
-install (FILES format.cpp DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
 
+add_executable(formatexe format.cpp)
+target_compile_features(formatexe PRIVATE cxx_variadic_templates)
+target_link_libraries(formatexe hexfloat)
+
+install (TARGETS formatexe DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 # For local tests
-add_definitions(-DRELEASE)
+# add_definitions(-DRELEASE)
