--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required(VERSION 3.1)
 
+execute_process(COMMAND cmd /c dir RESULT_VARIABLE rv)
+message("rv='${rv}'")
+
 message("Ох уж эти стандарты :(")
 
 project(format CXX)
