--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 3.1)
 
-execute_process(COMMAND cmd /c dir RESULT_VARIABLE rv)
-message("rv='${rv}'")
+set (git_cmd "cmd /c dir")
+message(STATUS "git cmd: ${git_cmd}")
+execute_process(COMMAND ${git_cmd}
+  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
+  RESULT_VARIABLE git_result
+  OUTPUT_VARIABLE git_ver)
+
+message(STATUS "git ver[${git_result}]: ${git_ver}")
 
 message("Ох уж эти стандарты :(")
 
